--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/building
 spring.datasource.username=root
 spring.datasource.password=123456
 
-#spring.jpa.hibernate.ddl-auto = none
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.hibernate.ddl-auto = create
 #spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 
 dev.Quan = Pham-Dac-Quan
 spring.profiles.active=uat
