--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 
-spring.datasource.url=jdbc:mysql://localhost:3306/building
+spring.datasource.url=jdbc:mysql://localhost:3306/estatebasic
 spring.datasource.username=root
 spring.datasource.password=123456
 
